--- a/public/css/application.css
+++ b/public/css/application.css
@@ -68,24 +68,39 @@ body {
   transform: scale(1.05);
 }
 
-.book-item {
-  padding-bottom: 4em;
+.contflex {
+  display: flex;
   align-items: center;
 }
 
 .book-list {
+  width: 100%;
+  /* flex-wrap: wrap; */
   padding-top: 20px;
   padding-left: 20px;
   list-style-type: none;
   display: flex;
+
+  /* justify-content:space-between; */
+  /* align-items: center; */
+}
+
+.book-item {
+  flex-wrap: wrap;
+  /* padding-bottom: 4em; */
+  align-items: center;
+  padding-right: 10px;
 }
 
 .container-entries {
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
   background-color: #fff;
   display: flex;
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
-  width: 46%;
+  width: 56%;
 }
 
 .img-entries {
@@ -97,10 +112,16 @@ body {
   border-radius: 5px 0 0 5px;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .container__text {
   padding: 20px 40px 0;
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
   flex-direction: column;
 }
 
@@ -110,6 +131,83 @@ body {
   /* font-weight: 400; */
   margin-bottom: 6px;
 }
+
+.text-info,
+.time-title,
+.time {
+  font: 16px Arial, sans-serif;
+}
+
+.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+.text h2 {
+  font: 20px 'Gloock', Helvetica, Arial, sans-serif;
+  color: black;
+}
+
+.PostContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  border-radius: 5px;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
+}
+
+.leftBox {
+  width: 40%;
+}
+
+.imgPost {
+  width: 500px;
+  height: 500px;
+}
+
+.buttonEditPostForm {
+  position: absolute;
+  bottom: -30px;
+  right: 20px;
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  background-color: rgb(8, 231, 90);
+  color: #fff;
+  padding: 22px 45px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
+}
+
+.buttonDeletePost {
+  position: absolute;
+  bottom: -30px;
+  right: 460px;
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  background-color: rgb(8, 231, 90);
+  color: #fff;
+  padding: 22px 45px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
+}
+
 /* .background-container {
   background-color: rgb(186, 199, 229);
   padding-top: 2em;
@@ -280,24 +378,6 @@ body {
   color: black;
   font: 16px 'Roboto', Helvetica, Arial, sans-serif;
   text-align: justify;
-}
-
-.btn {
-  position: absolute;
-  bottom: -20px;
-  right: -20px;
-  border: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  background-color: #fc9400;
-  color: #fff;
-  padding: 22px 45px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
 }
 
 i {
@@ -696,12 +776,6 @@ p {
   .img-entries {
     width: 110px;
     height: 110px;
-  }
-
-  .text-info,
-  .time-title,
-  .time {
-    font: 8px 'Roboto', Helvetica, Arial, sans-serif;
   }
 
   .text-title {
