--- a/public/css/application.css
+++ b/public/css/application.css
@@ -68,49 +68,7 @@ body {
   transform: scale(1.05);
 }
 
-.book-item {
-  padding-bottom: 4em;
-  align-items: center;
-}
-
-.book-list {
-  padding-top: 20px;
-  padding-left: 20px;
-  list-style-type: none;
-  display: flex;
-}
-
-.container-entries {
-  background-color: #fff;
-  display: flex;
-  border-radius: 20px;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
-  width: 46%;
-}
-
-.img-entries {
-  padding-top: 20px;
-  padding-left: 20px;
-  width: 220px;
-  height: 260px;
-  flex-shrink: 0;
-  border-radius: 5px 0 0 5px;
-}
-
-.container__text {
-  padding: 20px 40px 0;
-  display: flex;
-  align-items:flex-start;
-  flex-direction: column;
-}
-
-.container__text h1 {
-  font: 20px 'Gloock', Helvetica, Arial, sans-serif;
-  color: black;
-  /* font-weight: 400; */
-  margin-bottom: 6px;
-}
-/* .background-container {
+.background-container {
   background-color: rgb(186, 199, 229);
   padding-top: 2em;
   padding-left: 1em;
@@ -118,7 +76,7 @@ body {
   padding-bottom: 8em;
   margin-bottom: 16em;
   color: #fefefe;
-} */
+}
 
 .index-div {
   max-width: 1100px;
@@ -133,11 +91,9 @@ body {
   /* max-width: 1500px; */
   /* min-width: 50%; */
   position: absolute;
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
+  background: linear-gradient(hsl(186, 76%, 16%),
+      hsl(223, 90%, 60%),
+      hsl(240, 56%, 42%));
   box-shadow: 0 0 20px 0 blue;
 }
 
@@ -209,11 +165,9 @@ body {
 .button-search {
   width: 15%;
   height: 50px;
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
+  background: linear-gradient(hsl(186, 76%, 16%),
+      hsl(223, 90%, 60%),
+      hsl(240, 56%, 42%));
   box-shadow: 0 0 20px 0 blue;
   font: 16px 'Roboto', Helvetica, Arial, sans-serif;
   color: white;
@@ -248,11 +202,9 @@ body {
   padding: 20px;
   border-radius: 10px;
   transition: 0.2s;
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
+  background: linear-gradient(hsl(186, 76%, 16%),
+      hsl(223, 90%, 60%),
+      hsl(240, 56%, 42%));
   box-shadow: 0 0 20px 0 blue;
 }
 
@@ -272,6 +224,10 @@ body {
   color: white;
 }
 
+.entry-item {
+  padding-bottom: 4em;
+}
+
 .entry-title,
 .entry-time,
 .entry-body {
@@ -282,7 +238,28 @@ body {
   text-align: justify;
 }
 
-.btn {
+.entries-list {
+  padding-top: 20px;
+  list-style-type: none;
+}
+
+.container-entries {
+  background-color: #fff;
+  position: relative;
+  display: flex;
+  border-radius: 5px;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
+  position: relative;
+}
+
+.img-entries {
+  width: 300px;
+  height: 300px;
+  flex-shrink: 0;
+  border-radius: 5px 0 0 5px;
+}
+
+/* .btn {
   position: absolute;
   bottom: -20px;
   right: -20px;
@@ -298,7 +275,7 @@ body {
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
-}
+} */
 
 i {
   margin-left: 20px;
@@ -322,10 +299,21 @@ i {
   font-weight: 900;
 }
 
+.container__text {
+  padding: 40px 40px 0;
+}
+
+h1 {
+  color: #351897;
+  font-weight: 400;
+  margin-bottom: 6px;
+}
+
 .container__text__timing {
   display: flex;
   margin: 20px 0 10px;
 }
+
 .container__text__timing_time {
   margin-right: 40px;
 }
@@ -337,6 +325,7 @@ h2 {
   color: #818189;
   font: 16px 'Roboto', Helvetica, Arial, sans-serif;
 }
+
 p {
   color: black;
   font-size: 1.2rem;
@@ -414,11 +403,9 @@ p {
 
 .btnAuth,
 .btnPublish {
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
+  background: linear-gradient(hsl(186, 76%, 16%),
+      hsl(223, 90%, 60%),
+      hsl(240, 56%, 42%));
   box-shadow: 0 0 20px 0 blue;
   font: 24px 'Roboto', Helvetica, Arial, sans-serif;
   color: white;
@@ -509,6 +496,7 @@ p {
   height: 100%;
   border-right: 1px solid black;
 }
+
 .recipe-image,
 .url-recipe {
   width: 100%;
@@ -658,8 +646,7 @@ p {
   height: 30px;
 }
 
-@media (min-width: 768px) and (max-width: 1400px) {
-}
+@media (min-width: 768px) and (max-width: 1400px) {}
 
 @media (max-width: 767px) {
   body {
