--- a/public/css/application.css
+++ b/public/css/application.css
@@ -75,51 +75,39 @@ body {
 
 .book-list {
   width: 100%;
-  /* flex-wrap: wrap; */
   padding-top: 20px;
-  padding-left: 20px;
-  list-style-type: none;
+  padding-left: 50px;
+  padding-right: 50px;
+  flex-wrap: wrap;
   display: flex;
-
-  /* justify-content:space-between; */
-  /* align-items: center; */
+  justify-content: space-between;
+  align-items: center;
 }
 
 .book-item {
-  flex-wrap: wrap;
-  /* padding-bottom: 4em; */
+  width: 350px;
+  height: 550px;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  padding-right: 10px;
-}
-
-.container-entries {
-  width: 100%;
-  align-items: center;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   background-color: #fff;
-  display: flex;
   border-radius: 20px;
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
-  width: 56%;
 }
 
 .img-entries {
-  padding-top: 20px;
-  padding-left: 20px;
+  /* margin-top: 20px; */
+  /* padding-left: 30px; */
   width: 220px;
   height: 260px;
   flex-shrink: 0;
-  border-radius: 5px 0 0 5px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
 }
 
 .container__text {
-  padding: 20px 40px 0;
+  padding: 10px 40px 0;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -132,10 +120,13 @@ ul {
   margin-bottom: 6px;
 }
 
-.text-info,
-.time-title,
-.time {
+/* .text-title {
+  font: 8px 'Roboto', Helvetica, Arial, sans-serif;
+} */
+
+.text-info {
   font: 16px Arial, sans-serif;
+  text-align: justify;
 }
 
 .text {
@@ -227,6 +218,56 @@ ul {
   height: 26px;
 }
 
+.star-rating {
+  height: 20px;
+  display: flex;
+  align-items: center;
+  width: 160px;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  margin: 20px auto;
+  position: relative;
+}
+/* hide the inputs */
+.star-rating input {
+  display: none;
+}
+/* set properties of all labels */
+.star-rating > label {
+  width: 30px;
+  height: 30px;
+  font-family: Arial;
+  font-size: 30px;
+  transition: 0.2s ease;
+  color: orange;
+}
+/* give label a hover state */
+.star-rating label:hover {
+  color: #ff69b4;
+  transition: 0.2s ease;
+}
+.star-rating label:active::before {
+  transform: scale(1.1);
+}
+
+/* set shape of unselected label */
+.star-rating label::before {
+  content: '\2606';
+  position: absolute;
+  top: 0px;
+  line-height: 26px;
+}
+/* set full star shape for checked label and those that come after it */
+.star-rating input:checked ~ label:before {
+  content: '\2605';
+}
+
+@-moz-document url-prefix() {
+  .star-rating input:checked ~ label:before {
+    font-size: 36px;
+    line-height: 21px;
+  }
+}
 /* .background-container {
   background-color: rgb(186, 199, 229);
   padding-top: 2em;
@@ -789,9 +830,7 @@ p {
     height: 110px;
   }
 
-  .text-title {
-    font: 8px 'Roboto', Helvetica, Arial, sans-serif;
-  }
+  
 
   .gif {
     visibility: hidden;
@@ -811,7 +850,7 @@ p {
   }
 }
 
-img{
+img {
   max-width: 300px;
   max-height: 350px;
 }
