--- a/public/css/application.css
+++ b/public/css/application.css
@@ -92,24 +92,26 @@ body {
   padding-right: 50px;
   flex-wrap: wrap;
   display: flex;
-  justify-content: space-between;
+  gap: 1rem;
+  justify-content: center;
   align-items: center;
 }
 
 .book-item {
   width: 350px;
-  height: 550px;
+  /* height: 550px; */
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
+  /* /* justify-content: flex-start; */
   align-items: center;
-  /* flex-direction: column; */
   flex-wrap: wrap;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
 }
 
-.img-entries {
+.img-entries { 550px;
   /* margin-top: 20px; */
   /* padding-left: 30px; */
   width: 250px;
@@ -118,12 +120,19 @@ body {
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
 }
 
-/* .img-entries {
-  width: 300px;
-  height: 300px;
-  flex-shrink: 0;
-  border-radius: 5px 0 0 5px;
-} */
+.text-title {
+  margin: 1rem 1rem;
+  align-self: center;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.text-info {
+  font: 16px Arial, sans-serif;
+  height: 4rem;
+  overflow: hidden;
+}
+
 
 .container__text {
   padding: 10px 40px 0;
@@ -138,14 +147,23 @@ body {
   /* font-weight: 400; */
   margin-bottom: 6px;
 }
+.container__commentsFavorites {
+  width: 100%;
+  display: flex;
+  margin: 20px 0 10px;
+  justify-content: space-between;
+}
 
-/* .text-title {
-  font: 8px 'Roboto', Helvetica, Arial, sans-serif;
-} */
+.container__user{
+  display: flex;
+  font-size: 1.2rem;
+  gap: 0.5rem;
+  overflow: hidden;
+}
 
-.text-info {
-  font: 16px Arial, sans-serif;
-  text-align: justify;
+.container_comments_favs {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .text {
@@ -259,18 +277,7 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
 }
 
-.container__commentsFavorites {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin: 20px 0 10px;
-}
 
-.container_comments {
-  width: 50%;
-  display: flex;
-  justify-content: space-between;
-}
 
 .bookmark,
 .comments {
@@ -954,4 +961,12 @@ h2 {
 img {
   max-width: 300px;
   max-height: 350px;
+}
+
+/* BOOK VIEW */
+.container_book{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
