--- a/public/css/application.css
+++ b/public/css/application.css
@@ -99,11 +99,9 @@ body {
 
 .book-item {
   width: 350px;
-  /* height: 550px; */
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  /* /* justify-content: flex-start; */
   align-items: center;
   flex-wrap: wrap;
   background-color: #fff;
@@ -111,12 +109,9 @@ body {
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
 }
 
-.img-entries { 550px;
-  /* margin-top: 20px; */
-  /* padding-left: 30px; */
+.img-entries {
   width: 250px;
   height: 280px;
-  /* flex-shrink: 0; */
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
 }
 
@@ -130,9 +125,7 @@ body {
 .text-info {
   font: 16px Arial, sans-serif;
   height: 4rem;
-  overflow: hidden;
 }
-
 
 .container__text {
   padding: 10px 40px 0;
@@ -154,7 +147,7 @@ body {
   justify-content: space-between;
 }
 
-.container__user{
+.container__user {
   display: flex;
   font-size: 1.2rem;
   gap: 0.5rem;
@@ -238,9 +231,6 @@ body {
   text-align: justify;
 }
 
-.description p {
-}
-
 .buttonEditPostForm {
   position: absolute;
   bottom: -30px;
@@ -276,8 +266,6 @@ body {
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
 }
-
-
 
 .bookmark,
 .comments {
@@ -339,35 +327,6 @@ body {
     line-height: 21px;
   }
 }
-/* .background-container {
-
-  background-color: rgb(186, 199, 229);
-  padding-top: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-bottom: 8em;
-  margin-bottom: 16em;
-  color: #fefefe;
-}
-
-.index-div {
-  max-width: 1100px;
-  min-height: 50vh;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.index-img {
-  /* max-width: 1500px; */
-/* min-width: 50%; */
-/* position: absolute;
-  background: linear-gradient(hsl(186, 76%, 16%),
-      hsl(223, 90%, 60%),
-      hsl(240, 56%, 42%));
-  box-shadow: 0 0 20px 0 blue;
-} */
 
 .index-title {
   position: relative;
@@ -411,284 +370,6 @@ body {
   align-items: center;
 }
 
-.searchBlock {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
-}
-
-.input-search {
-  height: 50px;
-  flex: 1 0 auto;
-  border: 1px solid black;
-  border-radius: 6px;
-  text-indent: 10px;
-}
-
-.input-search::placeholder {
-  text-indent: 10px;
-  font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-  opacity: 0.7;
-  color: black;
-}
-
-.button-search {
-  width: 15%;
-  height: 50px;
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
-  box-shadow: 0 0 20px 0 blue;
-  font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-  color: white;
-  padding: 6px;
-  border: 1px solid black;
-  border-radius: 6px;
-}
-
-.button-search:hover {
-  opacity: 0.7;
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-.result-container {
-  display: flex;
-  gap: 20px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 100%;
-  margin-top: 26px;
-  margin-bottom: 26px;
-}
-
-.result-card {
-  width: 320px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  padding: 20px;
-  border-radius: 10px;
-  transition: 0.2s;
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
-  box-shadow: 0 0 20px 0 blue;
-}
-
-.result-card:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-.result-image {
-  border: 1px solid black;
-  width: 280px;
-  height: 280px;
-}
-
-.result-text {
-  font: 20px 'Poppins', Helvetica, Arial, sans-serif;
-  color: white;
-}
-
-.entry-item {
-  padding-bottom: 4em;
-}
-
-.entry-title,
-.entry-time,
-.entry-body {
-  font-size: 3em;
-  padding-bottom: 0.5em;
-  color: black;
-  font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-  text-align: justify;
-}
-
-.entries-list {
-  padding-top: 20px;
-  list-style-type: none;
-}
-
-.container-entries {
-  background-color: #fff;
-  position: relative;
-  display: flex;
-  border-radius: 5px;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
-  position: relative;
-}
-
-/* .btn {
-  position: absolute;
-  bottom: -20px;
-  right: -20px;
-  border: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  background-color: #fc9400;
-  color: #fff;
-  padding: 22px 45px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
-} */
-
-i {
-  margin-left: 20px;
-  font-size: 1.5rem;
-}
-
-.fa-arrow-right::before {
-  /* padding-right: 20px; */
-  content: '\279C';
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  margin-right: 5px;
-  margin-left: 10px;
-  color: #fff;
-  z-index: 100;
-}
-
-.fa,
-.fas {
-  font-weight: 900;
-}
-
-h1 {
-  color: #351897;
-  font-weight: 400;
-  margin-bottom: 6px;
-}
-
-.container__text__timing {
-  display: flex;
-  margin: 20px 0 10px;
-}
-
-.container__text__timing_time {
-  margin-right: 40px;
-}
-
-h2 {
-  margin-bottom: 5px;
-  font-size: 1rem;
-  font-weight: 400;
-  color: #818189;
-  font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-}
-
-.time {
-  color: #351897;
-  font-weight: 600;
-}
-
-.button-add,
-.btnEditOne,
-.btnDeleteOne {
-  display: flex;
-  align-items: center;
-  background-color: #fc9400;
-  color: #fff;
-  padding: 22px 45px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  border-radius: 5px;
-  text-decoration: none;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
-}
-
-.button-add:hover,
-.btnEditOne:hover,
-.btnDeleteOne:hover,
-.btn:hover,
-.btnAddrecipeFromApi:hover {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-.form-label {
-  display: block;
-  margin-bottom: 1em;
-  font: 24px 'Roboto', Helvetica, Arial, sans-serif;
-  color: #351897;
-  font-weight: 400;
-}
-
-.login-input,
-.email-input,
-.password-input,
-.title-input,
-.image-input,
-.body-textarea {
-  width: 100%;
-  display: block;
-  outline: none;
-  padding: 1em;
-  margin-bottom: 2em;
-  flex: 1 0 auto;
-  border: 1px solid black;
-  border-radius: 6px;
-  text-indent: 10px;
-  margin-top: 5px;
-}
-
-.login-input,
-.email-input,
-.password-input,
-.title-input,
-.image-input,
-.body-textarea::placeholder {
-  text-indent: 10px;
-  font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-  opacity: 0.7;
-  color: black;
-}
-
-.btnAuth,
-.btnPublish {
-  background: linear-gradient(
-    hsl(186, 76%, 16%),
-    hsl(223, 90%, 60%),
-    hsl(240, 56%, 42%)
-  );
-  box-shadow: 0 0 20px 0 blue;
-  font: 24px 'Roboto', Helvetica, Arial, sans-serif;
-  color: white;
-  padding: 1em;
-  text-decoration: none;
-  width: 100%;
-  margin-top: 2em;
-  margin-bottom: 3em;
-  padding: 1em;
-  border: 1px solid black;
-  border-radius: 6px;
-  text-align: center;
-  outline: none;
-}
-
-.btnPublish:hover,
-.btnAuth:hover {
-  opacity: 0.7;
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
 /* LOGIN!!!!!!!!!!! */
 
 #authSignInForm,
@@ -710,125 +391,119 @@ h2 {
   align-items: center;
 }
 
-/* */
-
-.main-recipes,
-.mainBoxRecipe {
-  position: relative;
+img {
+  max-width: 300px;
+  max-height: 350px;
 }
 
-.mainBox,
-.cardBox {
-  position: absolute;
-}
-
-.recipe-card,
-.card {
-  width: 1100px;
-  height: 600px;
-  background: #fff;
+/* BOOK VIEW */
+.container_book {
   display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  margin: 50px;
+  border-radius: 5px;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
+}
+
+.rigth-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
+}
+
+.rigth-container h2 {
+  margin-top: 5px;
+  font: 28px 'Gloock', Helvetica, Arial, sans-serif;
+  color: black;
+  font-weight: 400;
+}
+
+.rigth-container h3 {
+  color: black;
+  font-size: 18px;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+
+.rigth-container h3 {
+  color: black;
+  font-size: 14px;
+  text-align: start;
+}
+
+.rigth-container p {
+  margin: 20px;
+  font: 16px Arial, sans-serif;
+  height: 4rem;
   overflow: hidden;
-  border-radius: 6px;
-  border: 1px solid black;
 }
 
-.recipeThumb,
-.leftBoxRecipe {
-  position: relative;
-  height: 350px;
-  box-shadow: 0px 0px 130px 0 rgba(0, 0, 0, 0.38);
+.commentsBox {
+  margin: 50px;
+  /* background-color: rgba(0, 0, 0, 0.356); */
+  flex-direction: column;
+}
+
+.comment2 {
+  margin-bottom: 30px;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
+  background-color: #fffdee;
+  border-radius: 5px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.imageBox,
-.boxImage {
-  width: 40%;
-  height: 100%;
-  border-right: 1px solid black;
+
+.comment2 p {
+  margin-right: 5px;
+  font: 20px Arial, sans-serif;
+  /* height: 4rem;
+  overflow: hidden; */
 }
 
-.recipe-image,
-.url-recipe {
-  width: 100%;
-  height: 100%;
-  border-radius: 0%;
-}
-
-/* .rigthBox,
-.rigthBoxRecipe {
-  width: 50%;
-  height: 100%;
+.commentAuthor {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.commentBody{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.commentBody p {
+  margin-left: 5px;
+  font: 16px Arial, sans-serif;
+  height: 4rem;
+  overflow: hidden;
+  text-align: center;
+}
+
+.addCommentBox {
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-} */
-
-.titleBox,
-.timeBox,
-.nameBox,
-.cookingTimeBox {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.titleBox p,
-.nameBox p {
-  font: 32px 'Roboto', Helvetica, Arial, sans-serif;
-  color: #351897;
-  font-weight: 600;
-}
-
-.timeBox p,
-.clockBox {
-  font: 28px 'Roboto', Helvetica, Arial, sans-serif;
-  color: black;
-  font-weight: 300;
-}
-
-.imageclock,
-.imgClock {
-  width: 50px;
-  height: 50px;
-}
-
-.recipeContent,
-.recipeSteps {
-  border-top: 1px solid black;
-  padding-top: 50px;
-  padding-left: 20px;
   padding-bottom: 50px;
-  padding-right: 20px;
-  background-color: white;
-  display: flex;
-  align-items: center;
 }
 
-.recipe-info,
-.recipe-steps,
-.body-textarea {
-  font: 15px 'Roboto', Helvetica, Arial, sans-serif;
-  color: black;
-  justify-content: center;
+textarea {
+  resize: none;
+  display: block;
 }
 
-.btnAddrecipeFromApi {
-  position: absolute;
-  bottom: -80px;
-  right: 10px;
-  left: 10px;
-  border: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #fc9400;
+.sendBtn {
+  margin-top: 10px;
+  background-color: rgb(8, 231, 90);
   color: #fff;
   padding: 22px 45px;
   font-size: 1rem;
@@ -836,148 +511,4 @@ h2 {
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
-}
-
-.button-back {
-  position: absolute;
-  top: 10px;
-  bottom: 1px;
-  right: 5px;
-  left: 1050px;
-  z-index: 10;
-}
-
-.close-btn {
-  width: 30px;
-  height: 30px;
-}
-
-.close-btn:hover {
-  opacity: 0.7;
-  cursor: pointer;
-}
-
-.btnBox {
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.rigthBoxRecipe {
-  position: relative;
-}
-
-.close-btn-one {
-  position: absolute;
-  top: 1px;
-  right: -100px;
-  width: 30px;
-  height: 30px;
-}
-
-.close-btn-one:hover,
-.like {
-  opacity: 0.7;
-  cursor: pointer;
-}
-
-.aforbtn {
-  text-decoration: none;
-}
-
-.like {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: white;
-  border: none;
-  background-color: white;
-}
-
-.imageLike {
-  width: 30px;
-  height: 30px;
-}
-
-@media (min-width: 768px) and (max-width: 1400px) {
-}
-
-@media (max-width: 767px) {
-  body {
-    max-width: 767px;
-    font: 10px 'Roboto', Helvetica, Arial, sans-serif;
-  }
-
-  .index-img {
-    width: 250px;
-    height: 250px;
-  }
-
-  .index-title {
-    font: 14px 'Poppins', Helvetica, Arial, sans-serif;
-  }
-
-  .nav-link {
-    font: 12px 'Roboto', Helvetica, Arial, sans-serif;
-  }
-
-  .index-info {
-    font: 16px 'Roboto', Helvetica, Arial, sans-serif;
-    text-align: justify;
-  }
-
-  .container-entries {
-    flex-direction: column;
-  }
-
-  .button-search {
-    font: 8px 'Roboto', Helvetica, Arial, sans-serif;
-  }
-
-  .img-entries {
-    width: 110px;
-    height: 110px;
-  }
-
-  .gif {
-    visibility: hidden;
-  }
-
-  .imageLike {
-    width: 15px;
-    height: 15px;
-  }
-
-  .button-add,
-  .btnEditOne,
-  .btnDeleteOne,
-  .btn {
-    padding: 10px 25px;
-    font-size: 0.5rem;
-  }
-}
-
-img {
-  max-width: 300px;
-  max-height: 350px;
-}
-
-/* BOOK VIEW */
-.container_book{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-.comments2{
-  background-color: rgb(140, 140, 140);
-}
-.comment2{
-  width: 400px;
-}
-
-textarea{
-  resize:none;
-  display:block;
 }
