--- a/public/css/application.css
+++ b/public/css/application.css
@@ -276,6 +276,23 @@ body {
 /* .background-container {
 
 } */
+.container_ratings {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+rating {
+  margin: 0.3rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+rating > span {
+  font-size: 1rem;
+  font-weight: lighter;
+  line-height: 2rem;
+}
 
 .star-rating {
   height: 20px;
@@ -284,7 +301,7 @@ body {
   width: 160px;
   flex-direction: row-reverse;
   justify-content: space-between;
-  margin: 20px auto;
+  /* margin: 20px auto; */
   position: relative;
 }
 /* hide the inputs */
@@ -323,6 +340,59 @@ body {
 
 @-moz-document url-prefix() {
   .star-rating input:checked ~ label:before {
+    font-size: 36px;
+    line-height: 21px;
+  }
+}
+
+/* average rating */
+.astar-rating {
+  height: 20px;
+  display: flex;
+  align-items: center;
+  width: 160px;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  /* margin: 20px auto; */
+  position: relative;
+  pointer-events: none;
+}
+/* hide the inputs */
+.astar-rating input {
+  display: none;
+}
+/* set properties of all labels */
+.astar-rating > label {
+  width: 30px;
+  height: 30px;
+  font-family: Arial;
+  font-size: 30px;
+  transition: 0.2s ease;
+  color: orange;
+}
+/* give label a hover state */
+.astar-rating label:hover {
+  color: #ff69b4;
+  transition: 0.2s ease;
+}
+.astar-rating label:active::before {
+  transform: scale(1.1);
+}
+
+/* set shape of unselected label */
+.astar-rating label::before {
+  content: '\2606';
+  position: absolute;
+  top: 0px;
+  line-height: 26px;
+}
+/* set full star shape for checked label and those that come after it */
+.astar-rating input:checked ~ label:before {
+  content: '\2605';
+}
+
+@-moz-document url-prefix() {
+  .astar-rating input:checked ~ label:before {
     font-size: 36px;
     line-height: 21px;
   }
