--- a/public/css/application.css
+++ b/public/css/application.css
@@ -256,7 +256,7 @@ body {
   display: flex;
   align-items: center;
   background-color: rgb(8, 231, 90);
-  color: #fff;
+  color: black;
   padding: 22px 45px;
   font-size: 1rem;
   text-transform: uppercase;
@@ -274,7 +274,7 @@ body {
   display: flex;
   align-items: center;
   background-color: rgb(8, 231, 90);
-  color: #fff;
+  color: black;
   padding: 22px 45px;
   font-size: 1rem;
   text-transform: uppercase;
@@ -297,6 +297,12 @@ body {
   flex-direction: column;
   align-items: flex-end;
 }
+
+p {
+  /* font: 20px Arial, sans-serif; */
+  font: 16px Arial, sans-serif;
+}
+
 rating {
   margin: 0.3rem;
   display: flex;
@@ -557,6 +563,7 @@ textarea {
   display: block;
   text-indent: 10px;
   padding: 10px;
+  margin-top: 20px;
 }
 
 .sendBtn {
@@ -596,7 +603,6 @@ textarea {
     border-radius: 5px;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356);
   }
-  
 
   .text-info {
     font: 16px Arial, sans-serif;
@@ -604,6 +610,4 @@ textarea {
     margin-left: 10px;
     text-align: justify;
   }
-
-
 }
